redactable/tests/ui/sensitive_display_unsupported_specifier_rejected.rs
use redactable::SensitiveDisplay;

#[derive(SensitiveDisplay)]
#[error("value {value:x}")]
struct UnsupportedSpecifier {
    value: u32,
}

fn main() {}
